# simple-auth

./: .gitignore  Cargo.toml  README.md  appconfig.dev.json  clippy.toml  logcfg.yaml  openapi.yaml
simple-auth-crud/: Cargo.toml
simple-auth-crud/src/: lib.rs
simple-auth-crud/src/abs/: crud.rs  entity.rs  join_table.rs  mod.rs  table.rs
simple-auth-crud/src/crud/: mod.rs  realm_crud.rs  role_crud.rs  user_crud.rs
simple-auth-crud/src/crypto/: encrypted.rs  encryption_error.rs  mod.rs  password_hash.rs  secret.rs  secret_store.rs  sha_256_hash.rs
simple-auth-crud/src/db/: db_context.rs  mod.rs  realm_table.rs  role_table.rs  roles_to_realms_table.rs  secret_table.rs  user_contact_info_table.rs  user_table.rs  users_to_realms_table.rs  users_to_roles_table.rs
simple-auth-crud/src/entity/: PasswordHash.rs  contact_info_entity.rs  count.rs  mod.rs  password_hash.rs  realm_entity.rs  role_entity.rs  secret_entity.rs  user_entity.rs
simple-auth-crud/src/error/: crud_error.rs  encryption_error.rs  mod.rs
simple-auth-model/: Cargo.toml
simple-auth-model/src/: contact_info.rs  email.rs  ip_address.rs  jwt.rs  lib.rs  limit_vec.rs  password.rs  problem_details.rs  realm.rs  role.rs  user.rs
simple-auth-model/src/abs/: mod.rs
simple-auth-model/src/auth/: jwks.rs  jwt.rs  mod.rs  password_login.rs  refresh_token.rs  resource_owner_tokens.rs
simple-auth-model/src/config/: config.rs  database_config.rs  mod.rs  security_config.rs  server_config.rs
simple-auth-model/src/encoding/: base64_str.rs  jwt_str.rs  mod.rs
simple-auth-model/src/error/: contact_value_error.rs  mod.rs
simple-auth-model/src/realm/: mod.rs  update_realm.rs
simple-auth-model/src/role/: mod.rs  role_update.rs
simple-auth-model/src/user/: full_user.rs  (+2 more)
simple-auth-web/: Cargo.toml  appconfig.test.json  logcfg.test.yaml
simple-auth-web/src/: lib.rs  main.rs  startup.rs
simple-auth-web/tests/: startup_test.rs  tests.rs
(+67 files in other folders)
