[package]
name = "simple-auth-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
simple-auth-model = { path = "../simple-auth-model" }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio", "macros", "chrono", "uuid"] }
argon2 = "0.5.2"
aes-gcm = { version = "0.10.3", features = ["heapless"] }
sha2 = "0.10.8"
log = "0.4.20"