[package]
name = "simple-auth-model"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
lazy-regex = "3.1.0"
log = "0.4.20"
log4rs = { version = "1.2.0" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = { version = "0.21.7" }