[package]
name = "simple-auth-web"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
simple-auth-model = { path = "../simple-auth-model" }
simple-auth-crud = { path = "../simple-auth-crud" }
actix-web = "4.4.0"
actix-rt = "2.9.0"
actix-web-httpauth = "0.8.1"
actix-cors = "0.7.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }