[package]
name = "simple-auth-web"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
simple-auth-model = { path = "../simple-auth-model" }
simple-auth-crud = { path = "../simple-auth-crud" }
actix-web = "4"
actix-web-httpauth = "0.8"
actix-cors = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }